--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,7 +1,9 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
-    <corners android:radius="10dp" />
-    <stroke
-        android:width="30dp"
-        android:color="@color/white" />
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient android:startColor="#FFFFFF"
+        android:endColor="#ffffff"
+        android:angle="270" />
+    <corners android:radius="200dp" />
+    <stroke android:width="5px" android:color="#ffffff" />
 </shape>
