--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -6,7 +6,7 @@
     android:background="#2880F2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Loading">
 
     <ImageView
         android:id="@+id/imageView"
