--- a/app/src/main/res/layout/activity_redefinir_senha.xml
+++ b/app/src/main/res/layout/activity_redefinir_senha.xml
@@ -11,15 +11,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:background="#2880F2">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView12"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/kitlogo" />
     </LinearLayout>
@@ -31,8 +32,19 @@
         android:background="#2880F2"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center_horizontal"
+            android:text="Insira seu email:"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
+
         <EditText
-            android:id="@+id/editTextTextEmailAddress3"
+            android:id="@+id/editTextTextEmailAddress7"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
@@ -45,8 +57,18 @@
             android:paddingStart="30px"
             android:textColorHint="#286BF2" />
 
+        <TextView
+            android:id="@+id/textView19"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Redefina sua senha:"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
+
         <EditText
-            android:id="@+id/editTextTextPassword3"
+            android:id="@+id/editTextTextPassword7"
             android:layout_width="260dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
@@ -55,61 +77,37 @@
             android:drawableStart="@drawable/password"
             android:drawablePadding="8dp"
             android:ems="10"
-            android:hint="Senha"
+            android:hint="Nova senha"
+            android:inputType="textPassword"
+            android:padding="5dp"
+            android:paddingStart="30px"
+            android:textColorHint="#286BF2" />
+        <EditText
+            android:id="@+id/editTextTextPassword11"
+            android:layout_width="260dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/border"
+            android:drawableStart="@drawable/password"
+            android:drawablePadding="8dp"
+            android:ems="10"
+            android:hint="Confirmar senha"
             android:inputType="textPassword"
             android:padding="5dp"
             android:paddingStart="30px"
             android:textColorHint="#286BF2" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="25dp"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Não possui uma conta?"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginStart="4dp"
-                android:gravity="center"
-                android:onClick="Register"
-                android:text="@string/clique"
-                android:textColor="@color/white" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/esqueci"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/button5"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50dp"
             android:background="@drawable/border"
             android:onClick="Login"
-            android:text="Entrar"
+            android:text="Redefinir"
+            android:textAllCaps="false"
             android:textColor="#51ABFF"
             android:textStyle="bold" />
     </LinearLayout>
