--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    tools:context=".Ranking">
+
 
     <TextView
-        android:id="@+id/textView233"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="home"
+        android:text="rank"
         android:textSize="36sp" />
 
 <!--    <WebView-->
-<!--        android:id="@+id/webHome"-->
+<!--        android:id="@+id/webRanking"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent"-->
 <!--        android:layout_above="@+id/footer" />-->
