Commit de alterações no cadastro

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -22,7 +22,7 @@
             android:drawablePadding="8dp"
             android:ems="10"
             android:hint="Senha"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:padding="5dp"
             android:paddingStart="30px"
             android:textColorHint="#286BF2" />
