--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -37,11 +37,11 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border"
-        android:drawableStart="@drawable/email"
+        android:drawableStart="@drawable/perfil"
         android:drawablePadding="8dp"
         android:ems="20"
         android:hint="Nome"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:paddingStart="30px"
         android:textColorHint="#286BF2" />
 
@@ -62,11 +62,11 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border"
-        android:drawableStart="@drawable/password"
+        android:drawableStart="@drawable/perfil"
         android:drawablePadding="8dp"
         android:ems="10"
         android:hint="Nome de usuário"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:padding="5dp"
         android:paddingStart="30px"
         android:textColorHint="#286BF2" />
@@ -87,11 +87,11 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border"
-        android:drawableStart="@drawable/password"
+        android:drawableStart="@drawable/email"
         android:drawablePadding="8dp"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:padding="5dp"
         android:paddingStart="30px"
         android:textColorHint="#286BF2" />
@@ -113,11 +113,11 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border"
-        android:drawableStart="@drawable/password"
+        android:drawableStart="@drawable/calendario"
         android:drawablePadding="8dp"
         android:ems="10"
         android:hint="DD/MM/YYYY"
-        android:inputType="textPassword"
+        android:inputType="date"
         android:padding="5dp"
         android:paddingStart="30px"
         android:textColorHint="#286BF2" />
