--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -36,7 +36,7 @@ tools:context=".Perfil">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15sp"
-                android:text="Editar Perfil"
+                android:text="Foto de Perfil"
                 android:textAlignment="center"
                 android:textColor="#ffffff"
                 android:textSize="22dp" />
