--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -32,7 +32,7 @@ tools:context=".Perfil">
                 app:srcCompat="@drawable/fotoperfil" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/trocarFoto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15sp"
@@ -180,7 +180,7 @@ tools:context=".Perfil">
         </LinearLayout>
 
         <Button
-            android:id="@+id/cadastro"
+            android:id="@+id/assinar"
             android:layout_width="180dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
@@ -188,7 +188,7 @@ tools:context=".Perfil">
             android:layout_marginBottom="30dp"
             android:backgroundTint="#2880F2"
             android:clickable="true"
-            android:onClick="validarCampos"
+            android:onClick="fazerAssinatura"
             android:text="Assinatura"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
