Commit mudanças perfil

--- a/app/src/main/res/layout/activity_redefinir_senha.xml
+++ b/app/src/main/res/layout/activity_redefinir_senha.xml
@@ -106,11 +106,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:background="@drawable/border"
+            android:backgroundTint="#ffffff"
             android:onClick="resetPassword"
             android:text="Redefinir"
             android:textAllCaps="false"
             android:textColor="#51ABFF"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:cornerRadius="50dp" />
     </LinearLayout>
 </LinearLayout>
