--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -15,7 +15,7 @@
 
         <EditText
             android:id="@+id/editTextTextPassword3"
-            android:layout_width="290dp"
+            android:layout_width="270dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="1dp"
@@ -32,13 +32,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="25dp"
             android:orientation="vertical">
 
             <ImageButton
                 android:id="@+id/btnPerfil"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="2dp"
                 android:background="@android:color/transparent"
                 android:onClick="entrarPerfil"
                 android:src="@drawable/perfilimg" />
@@ -46,7 +47,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
+                android:layout_marginLeft="20dp"
                 android:text="Perfil"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
