--- a/app/src/main/res/layout/activity_escolher_foto.xml
+++ b/app/src/main/res/layout/activity_escolher_foto.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#2880F2"
     android:orientation="vertical"
-    tools:context=".EscolherFoto" >
+    tools:context=".EscolherFoto">
 
     <TextView
         android:id="@+id/txt"
@@ -22,17 +22,25 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.041" />
 
-    <ImageView
-        android:id="@+id/verImg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="280dp"
+        android:layout_height="280dp"
+        android:backgroundTint="#2880F2"
+        app:cardCornerRadius="100dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt"
-        app:layout_constraintVertical_bias="0.084"
-        app:srcCompat="@drawable/fotoperfil" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.18">
+
+        <ImageView
+            android:id="@+id/verImg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/fotoperfil" />
+    </androidx.cardview.widget.CardView>
 
     <ImageButton
         android:id="@+id/imgCamera"
