--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -24,12 +24,25 @@ tools:context=".Perfil">
             android:background="#2880F2"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="match_parent"
-                android:layout_height="193dp"
-                android:layout_marginTop="34sp"
-                app:srcCompat="@drawable/fotoperfil" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="240dp"
+                android:layout_height="240dp"
+                android:layout_gravity="center_horizontal"
+                app:cardCornerRadius="120dp"
+                app:cardElevation="4dp"
+                app:cardUseCompatPadding="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.18">
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/semfoto" />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/trocarFoto"
@@ -44,7 +57,7 @@ tools:context=".Perfil">
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="384dp"
+            android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
@@ -65,14 +78,14 @@ tools:context=".Perfil">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:text="José Almeida Ribeiro"
+                android:text="Carregando..."
                 android:textColor="#2880F2"
                 android:textSize="22dp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="384dp"
+            android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
@@ -93,13 +106,13 @@ tools:context=".Perfil">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:text="JoseRibeiro2772"
+                android:text="Carregando..."
                 android:textColor="#2880F2"
                 android:textSize="22dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="384dp"
+            android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
@@ -120,13 +133,13 @@ tools:context=".Perfil">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:text="exemplo@exemplo.com"
+                android:text="Carregando..."
                 android:textColor="#2880F2"
                 android:textSize="22dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="384dp"
+            android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
@@ -147,13 +160,13 @@ tools:context=".Perfil">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:text="*********"
+                android:text="Carregando..."
                 android:textColor="#2880F2"
                 android:textSize="22dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="384dp"
+            android:layout_width="364dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
@@ -174,7 +187,7 @@ tools:context=".Perfil">
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:text="12/06/1987"
+                android:text="Carregando..."
                 android:textColor="#2880F2"
                 android:textSize="22dp" />
         </LinearLayout>
