commit para pegar pull

--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -7,18 +7,18 @@
     tools:context=".Ranking">
 
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="rank"
-        android:textSize="36sp" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="rank"-->
+<!--        android:textSize="36sp" />-->
 
-<!--    <WebView-->
-<!--        android:id="@+id/webRanking"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_above="@+id/footer" />-->
+    <WebView
+        android:id="@+id/webRanking"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/footer" />
 
     <include layout="@layout/menu_foooter"
         android:id="@+id/footer"
