--- a/app/src/main/res/layout/activity_aulas.xml
+++ b/app/src/main/res/layout/activity_aulas.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Aulas">
 
-    <TextView
-        android:id="@+id/textView1112"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aulas"
-        android:textSize="36sp" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView1112"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Aulas"-->
+<!--        android:textSize="36sp" />-->
 
 
-<!--    <WebView-->
-<!--        android:id="@+id/webAula"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_above="@+id/footer" />-->
+    <WebView
+        android:id="@+id/webAula"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/footer" />
 
     <include layout="@layout/menu_foooter"
         android:id="@+id/footer"
