Commit com informações para integrar

--- a/app/src/main/res/layout/activity_escolher_foto.xml
+++ b/app/src/main/res/layout/activity_escolher_foto.xml
@@ -74,6 +74,7 @@
         android:layout_marginTop="71dp"
         android:layout_marginBottom="168dp"
         android:backgroundTint="#ffffff"
+        android:onClick="salvarFoto"
         android:text="Salvar Foto"
         android:textAllCaps="false"
         android:textColor="#2880F2"
