--- a/app/src/main/res/layout/menu_foooter.xml
+++ b/app/src/main/res/layout/menu_foooter.xml
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:src="@drawable/tarefas" />
+            android:src="@drawable/iconex" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:src="@drawable/aulas" />
+            android:src="@drawable/book" />
 
         <TextView
             android:layout_width="wrap_content"
